# piscine_python

./: README.md  couleurs.ipynb  requirements.txt
Array/: README.md
Array/ex00/: give_bmi.py  main.py
Array/ex01/: array2D.py  main.py
Array/ex02/: load_image.py  main.py
Array/ex03/: load_image.py  zoom.py
Array/ex04/: load_image.py  rotate.py
Array/ex05/: main.py  pimp_image.py
DataTable/: README.md
DataTable/ex00/: load_csv.py  main.py  tableur.csv
DataTable/ex01/: aff_life.py  load_csv.py  main.py
DataTable/ex02/: aff_pop.py  load_csv.py
DataTable/ex03/: load_csv.py  projection_life.py
Dot/: README.md
Dot/ex00/: main.py  statistics.py
Dot/ex01/: in_out.py  main.py
Dot/ex02/: callLimit.py  main.py
Dot/ex03/: main.py  new_student.py
OOP/: README.md
OOP/ex00/: S1E9.py  main.py
OOP/ex01/: S1E7.py  S1E9.py  main.py
OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  main.py
OOP/ex03/: ft_calculator.py  main.py
OOP/ex04/: ft_calculator.py  main.py
Starting/: Hello.py  README.md
Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py  main.py
Starting/ex03/: NULL_not_found.py  main.py
Starting/ex04/: whatis.py
Starting/ex05/: building.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py  main.py
Starting/ex09/:  __init__.py  README.md  ft_package.py  main.py  pyproject.toml  setup.py  test.py
py_env/: pyvenv.cfg
